--- a/index.html
+++ b/index.html
@@ -3,15 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title> Arun Jose </title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
   <script src="script.js"></script>
 </head>
 
 <body onload="splash(1000)">
+	<div id="mobile-menu">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+		  <button class="btn btn-dark" type="button" data-trigger="#main_nav">
+		    <img src="Assets/Icons/menu.png">
+		  </button>
+
+		  <div class="navbar-collapse" id="main_nav">
+				<div class="offcanvas-header mt-3">  
+					<button class="btn btn-dark btn-close float-left"> &times </button>
+				</div>
+				<ul class="navbar-nav w-100 justify-content-center">
+					<li class="nav-item"> <a class="nav-link" href="#about"> About </a> </li>
+					<li class="nav-item"> <a class="nav-link" href="#work"> Work </a></li>
+					<li class="nav-item"> <a class="nav-link" href="#art"> Art </a></li>
+					<li class="nav-item"> <a class="nav-link" href="#history"> History </a></li>
+					<li class="nav-item"> <a class="nav-link" href="#blog"> Blog </a></li>
+					<li class="nav-item"> <a class="nav-link" href="#more"> More </a></li>
+				</ul>
+		  </div>
+		</nav>
+	</div>
 	<div id="splashscreen">
 	</div>
 	<div id="landing">
@@ -26,10 +47,11 @@
 			<div class="row" id="landing-row"></div>
 			<div class="row" id="landing-row"></div>
 			<div class="row" id="landing-row">
-				<div class="landing-name-container">
+				<div id="landing-name-container">
 					<div class="landing-line-left"></div>
 					<div class="landing-name-text">
 						Jose
+						<div class="landing-name-underline"></div>
 					</div>
 					<div class="landing-line-right"></div>
 				</div>
