About Page desktop and mobile views.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,49 @@
 		</div>
 	</div>
 	<div id="about">
+		<div class="container-fluid" id="about-container">
+			<div class="row" id="about-row">
+				<div class="col-md-12 col-lg-6">
+					<div class="about-image-container">
+						<img class="about-image" src="Assets/Graphics/avatar.png">
+					</div>
+				</div>
+				<div class="col-lg-6" id="about-text-container">
+					<div class="about-head">
+						What's an Arun Jose?
+					</div>
+					<div class="about-description" id="about-description">
+					</div>
+					<div class="about-buttons">
+						<div class="about-button-container">
+							<a href="https://www.instagram.com/jozdien/">
+								<img class="about-insta" src="Assets/Graphics/insta.svg">
+							</a>
+						</div>
+						<div class="about-button-container">
+							<a href="https://github.com/Jozdien">
+								<img class="about-github" src="Assets/Graphics/github.svg">
+							</a>
+						</div>
+						<div class="about-button-container">
+							<a href="https://www.linkedin.com/in/jozdien/">
+								<img class="about-linkedin" src="Assets/Graphics/linkedin.svg">
+							</a>
+						</div>
+						<div class="about-button-container">
+							<a href="https://twitter.com/jozdien">
+								<img class="about-twitter" src="Assets/Graphics/twitter.svg">
+							</a>
+						</div>
+						<div class="about-button-container">
+							<a href="mailto:jozdien@gmail.com">
+								<img class="about-mail" src="Assets/Graphics/mail.png">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="work">
 	</div>
@@ -127,5 +170,8 @@
 	</div>
 	<div id="more">
 	</div>
+
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase.js"></script>
+	<script src="firebase.js"></script>
 </body>
 </html>
