Finish Work page, different views, animations, and database loading.

--- a/index.html
+++ b/index.html
@@ -172,46 +172,294 @@
 					<div class="title-line-right title-line-anim"></div>
 				</div>
 			</div>
-			<div class="row" id="work-row-items">
-				<div class="work-item-content-outer">
-					<div class="work-item-content">
-						<div class="work-item-title">
-							The Calibration Game
+			<div class="row" id="work-row-items">=
+				<div class="work-row-item-container work-anim">
+					<div class="work-item-content-outer">
+						<div class="work-item-content">
+							<div id="work-1-title" class="work-item-title">
+							</div>
+							<div id="work-1-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-1-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-1-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-1-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-1-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-1-link-external" class="work-item-link-container">
+								</div>
+							</div>
 						</div>
-						<div class="work-item-description">
-							An android app that optimizes credence calibration - the accuracy of belief strengths against real success rates - with a scoring system that incentivizes alignment of "sureness" with success rates.
-							<br>
-							<a href="https://acritch.com/credence-game/">A better description can be found here.</a>
-						</div>
-						<div class="work-item-tags">
-							<div class="work-item-tag-container">
-								React Native
+					</div>
+					<div id="work-1-image" class="work-item-image-container">
+					</div>
+					<div class="work-item-all">
+						<div id="work-1-background" class="work-item-background">
+							<div id="work-1-title" class="work-item-title">
 							</div>
-							<div class="work-item-tag-container">
-								Firebase
+							<div id="work-1-description" class="work-item-description">
 							</div>
-							<div class="work-item-tag-container">
-								Heuristics
+							<div class="work-item-tags">
+								<div id="work-1-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-1-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-1-tag-3" class="work-item-tag-container">
+								</div>
 							</div>
-						</div>
-						<div class="work-item-links">
-							<div class="work-item-link-container">
-								<a href="https://github.com/Jozdien/The_Calibration_Game">
-									<img class="work-github" src="Assets/Graphics/github.svg">
-								</a>
-							</div>
-							<div class="work-item-link-container">
-								<a href="https://play.google.com/store/apps/details?id=com.the_calibration_game&hl=en_US&gl=US">
-									<img class="work-external" src="Assets/Graphics/external.svg">
-								</a>
+							<div class="work-item-links">
+								<div id="work-1-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-1-link-external" class="work-item-link-container">
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="work-item-image-container">
-					<div class="work-item-image"></div>
+				<div class="work-row-item-container work-anim">
+					<div class="work-item-content-outer">
+						<div class="work-item-content">
+							<div id="work-2-title" class="work-item-title">
+							</div>
+							<div id="work-2-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-2-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-2-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-2-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-2-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-2-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="work-2-image" class="work-item-image-container">
+					</div>
+					<div class="work-item-all">
+						<div id="work-2-background" class="work-item-background">
+							<div id="work-2-title" class="work-item-title">
+							</div>
+							<div id="work-2-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-2-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-2-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-2-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-2-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-2-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div class="work-item-all">
+				<div class="work-row-item-container work-anim">
+					<div class="work-item-content-outer">
+						<div class="work-item-content">
+							<div id="work-3-title" class="work-item-title">
+							</div>
+							<div id="work-3-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-3-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-3-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-3-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-3-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-3-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="work-3-image" class="work-item-image-container">
+					</div>
+					<div class="work-item-all">
+						<div id="work-3-background" class="work-item-background">
+							<div id="work-3-title" class="work-item-title">
+							</div>
+							<div id="work-3-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-3-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-3-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-3-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-3-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-3-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work-row-item-container work-anim">
+					<div class="work-item-content-outer">
+						<div class="work-item-content">
+							<div id="work-4-title" class="work-item-title">
+							</div>
+							<div id="work-4-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-4-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-4-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-4-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-4-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-4-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="work-4-image" class="work-item-image-container">
+					</div>
+					<div class="work-item-all">
+						<div id="work-4-background" class="work-item-background">
+							<div id="work-4-title" class="work-item-title">
+							</div>
+							<div id="work-4-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-4-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-4-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-4-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-4-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-4-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work-row-item-container work-anim">
+					<div class="work-item-content-outer">
+						<div class="work-item-content">
+							<div id="work-5-title" class="work-item-title">
+							</div>
+							<div id="work-5-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-5-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-5-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-5-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-5-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-5-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="work-5-image" class="work-item-image-container">
+					</div>
+					<div class="work-item-all">
+						<div id="work-5-background" class="work-item-background">
+							<div id="work-5-title" class="work-item-title">
+							</div>
+							<div id="work-5-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-5-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-5-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-5-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-5-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-5-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="work-row-item-container work-anim">
+					<div class="work-item-content-outer">
+						<div class="work-item-content">
+							<div id="work-6-title" class="work-item-title">
+							</div>
+							<div id="work-6-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-6-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-6-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-6-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-6-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-6-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="work-6-image" class="work-item-image-container">
+					</div>
+					<div class="work-item-all">
+						<div id="work-6-background" class="work-item-background">
+							<div id="work-6-title" class="work-item-title">
+							</div>
+							<div id="work-6-description" class="work-item-description">
+							</div>
+							<div class="work-item-tags">
+								<div id="work-6-tag-1" class="work-item-tag-container">
+								</div>
+								<div id="work-6-tag-2" class="work-item-tag-container">
+								</div>
+								<div id="work-6-tag-3" class="work-item-tag-container">
+								</div>
+							</div>
+							<div class="work-item-links">
+								<div id="work-6-link-github" class="work-item-link-container">
+								</div>
+								<div id="work-6-link-external" class="work-item-link-container">
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
