History Page, mobile view, animations - only database linking left.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<ul class="navbar-nav w-100 justify-content-center">
 					<li class="nav-item"> <a class="nav-link" href="#about"> About </a> </li>
 					<li class="nav-item"> <a class="nav-link" href="#work"> Work </a></li>
-					<li class="nav-item"> <a class="nav-link" href="#art"> Art </a></li>
 					<li class="nav-item"> <a class="nav-link" href="#history"> History </a></li>
+					<li class="nav-item"> <a class="nav-link" href="#art"> Art </a></li>
 					<li class="nav-item"> <a class="nav-link" href="#blog"> Blog </a></li>
 					<li class="nav-item"> <a class="nav-link" href="#more"> More </a></li>
 				</ul>
@@ -81,17 +81,17 @@
 					<div class="landing-menu-divider">
 						/
 					</div>
-					<a href="#art">
+					<a href="#history">
 						<div class="landing-menu-item">
-							Art
+							History
 						</div>
 					</a>
 					<div class="landing-menu-divider">
 						/
 					</div>
-					<a href="#history">
+					<a href="#art">
 						<div class="landing-menu-item">
-							History
+							Art
 						</div>
 					</a>
 					<div class="landing-menu-divider">
@@ -162,7 +162,7 @@
 	</div>
 	<div id="work">
 		<div class="container-fluid" id="work-container">
-			<div class="row" id="work-row-head">
+			<div class="row" id="title-row-head">
 				<div class="title-container">
 					<div class="title-line-left title-line-anim"></div>
 					<div class="title-head-text title-head-anim">
@@ -172,7 +172,7 @@
 					<div class="title-line-right title-line-anim"></div>
 				</div>
 			</div>
-			<div class="row" id="work-row-items">=
+			<div class="row" id="work-row-items">
 				<div class="work-row-item-container work-anim">
 					<div class="work-item-content-outer">
 						<div class="work-item-content">
@@ -465,6 +465,135 @@
 		</div>
 	</div>
 	<div id="history">
+		<div class="container-fluid" id="history-container">
+			<div class="row" id="title-row-head">
+				<div class="title-container">
+					<div class="title-line-left-black title-line-anim"></div>
+					<div class="title-head-text-black title-head-anim">
+						History
+						<div class="title-head-underline-black title-underline-anim"></div>
+					</div>
+					<div class="title-line-right-black title-line-anim"></div>
+				</div>
+			</div>
+			<div class="row" id="history-positions">
+				<div class="history-subtitle history-anim">
+					Positions
+				</div>
+				<div class="history-position-items">
+					<div class="history-position-item-container history-anim">
+						<div class="history-item-image-container">
+							<div class="history-item-image" style="background: url('Assets/Graphics/freelance.gif'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+							</div>
+						</div>
+						<div class="history-item-content">
+							<div class="history-item-title">
+								Co-ordinator/Co-Founder
+							</div>
+							<div class="history-item-subtitle">
+								IEEE SB CET Special Interest Group for AI &#183; Since February 2020
+							</div>
+							<div class="history-item-description">
+								<ul>
+									<li>
+										Set up an industry collaboration with <a href="https://neuroplex.in/"> Neuroplex </a> to provide experienced training and internship opportunities.
+									</li>
+									<li>
+										Hosted <a href="https://github.com/Jozdien/AI-For-Dummies">workshop series</a> on Machine Learning, Deep Learning, and Friendly AI - 23 participants went on to complete projects in predictive analysis.
+									</li>
+									<li>
+										Hosted webinar series on Data Science and Deep Learning.
+									</li>
+									<li>
+										Organized AI Safety competiton, which closed with an <a href="https://www.youtube.com/watch?v=4nN8wUVZ9u0">analysis</a> of the common fallacies faced  (Check that link out, I swear it's cooler than it sounds).
+									</li>
+									<li>
+										Collaborated with the <a href="https://intelligence.org/">Machine Intelligence Research Institute</a> for instructional material and technical assistance.
+									</li>
+									<li>
+										Founded 2 Special Interest Groups for AI in IEEE Student Branches across the state.
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" id="history-awards">
+				<div class="history-subtitle history-anim">
+					Awards
+				</div>
+				<div class="history-award-items">
+					<div class="history-award-item-container history-anim">
+						<div class="history-award-item-head">
+							<div class="history-award-item-title">
+								EVOKE'19 Hackathon
+							</div>
+							<div class="history-award-item-subtitle">
+								1st Place &#183; Feb 2019
+							</div>
+						</div>
+						<div class="history-award-item-description">
+							National level tech summit by IEDC TKMCE and IEEE SB TKMCE.<br>Developed an emergency management platform (Refer Karma in the last section).
+						</div>
+					</div>
+					<div class="history-award-item-container history-anim">
+						<div class="history-award-item-head">
+							<div class="history-award-item-title">
+								EVOKE'19 Hackathon
+							</div>
+							<div class="history-award-item-subtitle">
+								1st Place &#183; Feb 2019
+							</div>
+						</div>
+						<div class="history-award-item-description">
+							National level tech summit by IEDC TKMCE and IEEE SB TKMCE.<br>Developed an emergency management platform (Refer Karma in the last section).
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" id="history-education">
+				<div class="history-subtitle history-anim">
+					Education
+				</div>
+				<div class="history-education-items">
+					<div class="history-education-item-container history-anim">
+						<div class="history-item-image-container">
+							<div class="history-item-image" style="background: url('Assets/Graphics/freelance.gif'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+							</div>
+						</div>
+						<div class="history-item-content">
+							<div class="history-item-title">
+								College of Engineering Trivandrum
+							</div>
+							<div class="history-item-subtitle">
+								B.Tech CSE &#183; Class of 2022
+							</div>
+							<div class="history-item-description">
+								When I'm not cutting classes to do something else, I'm a third year Computer Science undergraduate.
+							</div>
+						</div>
+					</div>
+					<div class="history-education-item-container history-anim">
+						<div class="history-item-image-container">
+							<div class="history-item-image" style="background: url('Assets/Graphics/freelance.gif'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+							</div>
+						</div>
+						<div class="history-item-content">
+							<div class="history-item-title">
+								College of Engineering Trivandrum
+							</div>
+							<div class="history-item-subtitle">
+								B.Tech CSE &#183; Class of 2022
+							</div>
+							<div class="history-item-description">
+								When I'm not cutting classes to do something else, I'm a third year Computer Science undergraduate.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="art">
 	</div>
