--- a/index.html
+++ b/index.html
@@ -482,38 +482,50 @@
 				</div>
 				<div class="history-position-items">
 					<div class="history-position-item-container history-anim">
-						<div class="history-item-image-container">
-							<div class="history-item-image" style="background: url('Assets/Graphics/freelance.gif'); background-position: center; background-repeat: no-repeat; background-size: cover;">
-							</div>
+						<div class="history-item-image-container" id="position-1-image">
 						</div>
 						<div class="history-item-content">
-							<div class="history-item-title">
-								Co-ordinator/Co-Founder
+							<div class="history-item-title" id="position-1-title">
 							</div>
-							<div class="history-item-subtitle">
-								IEEE SB CET Special Interest Group for AI &#183; Since February 2020
+							<div class="history-item-subtitle" id="position-1-subtitle">
 							</div>
-							<div class="history-item-description">
-								<ul>
-									<li>
-										Set up an industry collaboration with <a href="https://neuroplex.in/"> Neuroplex </a> to provide experienced training and internship opportunities.
-									</li>
-									<li>
-										Hosted <a href="https://github.com/Jozdien/AI-For-Dummies">workshop series</a> on Machine Learning, Deep Learning, and Friendly AI - 23 participants went on to complete projects in predictive analysis.
-									</li>
-									<li>
-										Hosted webinar series on Data Science and Deep Learning.
-									</li>
-									<li>
-										Organized AI Safety competiton, which closed with an <a href="https://www.youtube.com/watch?v=4nN8wUVZ9u0">analysis</a> of the common fallacies faced  (Check that link out, I swear it's cooler than it sounds).
-									</li>
-									<li>
-										Collaborated with the <a href="https://intelligence.org/">Machine Intelligence Research Institute</a> for instructional material and technical assistance.
-									</li>
-									<li>
-										Founded 2 Special Interest Groups for AI in IEEE Student Branches across the state.
-									</li>
-								</ul>
+							<div class="history-item-description" id="position-1-description">
+							</div>
+						</div>
+					</div>
+					<div class="history-position-item-container history-anim">
+						<div class="history-item-image-container" id="position-2-image">
+						</div>
+						<div class="history-item-content">
+							<div class="history-item-title" id="position-2-title">
+							</div>
+							<div class="history-item-subtitle" id="position-2-subtitle">
+							</div>
+							<div class="history-item-description" id="position-2-description">
+							</div>
+						</div>
+					</div>
+					<div class="history-position-item-container history-anim">
+						<div class="history-item-image-container" id="position-3-image">
+						</div>
+						<div class="history-item-content">
+							<div class="history-item-title" id="position-3-title">
+							</div>
+							<div class="history-item-subtitle" id="position-3-subtitle">
+							</div>
+							<div class="history-item-description" id="position-3-description">
+							</div>
+						</div>
+					</div>
+					<div class="history-position-item-container history-anim">
+						<div class="history-item-image-container" id="position-4-image">
+						</div>
+						<div class="history-item-content">
+							<div class="history-item-title" id="position-4-title">
+							</div>
+							<div class="history-item-subtitle" id="position-4-subtitle">
+							</div>
+							<div class="history-item-description" id="position-4-description">
 							</div>
 						</div>
 					</div>
@@ -526,28 +538,52 @@
 				<div class="history-award-items">
 					<div class="history-award-item-container history-anim">
 						<div class="history-award-item-head">
-							<div class="history-award-item-title">
-								EVOKE'19 Hackathon
+							<div class="history-award-item-title" id="award-1-title">
 							</div>
-							<div class="history-award-item-subtitle">
-								1st Place &#183; Feb 2019
+							<div class="history-award-item-subtitle" id="award-1-subtitle">
 							</div>
 						</div>
-						<div class="history-award-item-description">
-							National level tech summit by IEDC TKMCE and IEEE SB TKMCE.<br>Developed an emergency management platform (Refer Karma in the last section).
+						<div class="history-award-item-description" id="award-1-description">
 						</div>
 					</div>
 					<div class="history-award-item-container history-anim">
 						<div class="history-award-item-head">
-							<div class="history-award-item-title">
-								EVOKE'19 Hackathon
+							<div class="history-award-item-title" id="award-2-title">
 							</div>
-							<div class="history-award-item-subtitle">
-								1st Place &#183; Feb 2019
+							<div class="history-award-item-subtitle" id="award-2-subtitle">
 							</div>
 						</div>
-						<div class="history-award-item-description">
-							National level tech summit by IEDC TKMCE and IEEE SB TKMCE.<br>Developed an emergency management platform (Refer Karma in the last section).
+						<div class="history-award-item-description" id="award-2-description">
+						</div>
+					</div>
+					<div class="history-award-item-container history-anim">
+						<div class="history-award-item-head">
+							<div class="history-award-item-title" id="award-3-title">
+							</div>
+							<div class="history-award-item-subtitle" id="award-3-subtitle">
+							</div>
+						</div>
+						<div class="history-award-item-description" id="award-3-description">
+						</div>
+					</div>
+					<div class="history-award-item-container history-anim">
+						<div class="history-award-item-head">
+							<div class="history-award-item-title" id="award-4-title">
+							</div>
+							<div class="history-award-item-subtitle" id="award-4-subtitle">
+							</div>
+						</div>
+						<div class="history-award-item-description" id="award-4-description">
+						</div>
+					</div>
+					<div class="history-award-item-container history-anim">
+						<div class="history-award-item-head">
+							<div class="history-award-item-title" id="award-5-title">
+							</div>
+							<div class="history-award-item-subtitle" id="award-5-subtitle">
+							</div>
+						</div>
+						<div class="history-award-item-description" id="award-5-description">
 						</div>
 					</div>
 				</div>
@@ -558,36 +594,26 @@
 				</div>
 				<div class="history-education-items">
 					<div class="history-education-item-container history-anim">
-						<div class="history-item-image-container">
-							<div class="history-item-image" style="background: url('Assets/Graphics/freelance.gif'); background-position: center; background-repeat: no-repeat; background-size: cover;">
-							</div>
+						<div class="history-item-image-container" id="education-1-image">
 						</div>
 						<div class="history-item-content">
-							<div class="history-item-title">
-								College of Engineering Trivandrum
+							<div class="history-item-title" id="education-1-title">
 							</div>
-							<div class="history-item-subtitle">
-								B.Tech CSE &#183; Class of 2022
+							<div class="history-item-subtitle" id="education-1-subtitle">
 							</div>
-							<div class="history-item-description">
-								When I'm not cutting classes to do something else, I'm a third year Computer Science undergraduate.
+							<div class="history-item-description"  id="education-1-description">
 							</div>
 						</div>
 					</div>
 					<div class="history-education-item-container history-anim">
-						<div class="history-item-image-container">
-							<div class="history-item-image" style="background: url('Assets/Graphics/freelance.gif'); background-position: center; background-repeat: no-repeat; background-size: cover;">
-							</div>
+						<div class="history-item-image-container" id="education-2-image">
 						</div>
 						<div class="history-item-content">
-							<div class="history-item-title">
-								College of Engineering Trivandrum
+							<div class="history-item-title" id="education-2-title">
 							</div>
-							<div class="history-item-subtitle">
-								B.Tech CSE &#183; Class of 2022
+							<div class="history-item-subtitle" id="education-2-subtitle">
 							</div>
-							<div class="history-item-description">
-								When I'm not cutting classes to do something else, I'm a third year Computer Science undergraduate.
+							<div class="history-item-description"  id="education-2-description">
 							</div>
 						</div>
 					</div>
@@ -596,6 +622,44 @@
 		</div>
 	</div>
 	<div id="art">
+		<div class="container-fluid" id="art-container">
+			<div class="row" id="title-row-head">
+				<div class="title-container">
+					<div class="title-line-left title-line-anim"></div>
+					<div class="title-head-text title-head-anim">
+						Art
+						<div class="title-head-underline title-underline-anim"></div>
+					</div>
+					<div class="title-line-right title-line-anim"></div>
+				</div>
+			</div>
+			<div class="row" id="art-items">
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-1">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-2">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-3">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-4">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-5">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-6">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-7">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-8">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-9">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-10">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-11">
+				</div>
+				<div class="col-lg-2 col-md-3 col-sm-4 col-6 art-item-container art-anim" id="art-12">
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="blog">
 	</div>
