Large part of Blogs Page.

--- a/index.html
+++ b/index.html
@@ -662,6 +662,59 @@
 		</div>
 	</div>
 	<div id="blog">
+		<div class="container-fluid" id="blog-container">
+			<div class="row" id="title-row-head">
+				<div class="title-container">
+					<div class="title-line-left-black title-line-anim"></div>
+					<div class="title-head-text-black title-head-anim">
+						Stuff I Write
+						<div class="title-head-underline-black title-underline-anim"></div>
+					</div>
+					<div class="title-line-right-black title-line-anim"></div>
+				</div>
+			</div>
+			<div class="row" id="blog-recommended">
+				<div class="blog-subtitle">
+					Recommended
+				</div>
+				<div class="blog-recommended-items">
+					<a href="" class="blog-recommended-item-container">
+						<div class="blog-item-image-container">
+							<div class="blog-item-image" style="background: url('Assets/Graphics/background.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;"></div>
+						</div>
+						<div class="blog-recommended-item-text">
+							The Loyolite
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="row" id="blog-post">
+				<div class="blog-subtitle">
+					Posts
+				</div>
+				<div class="blog-items">
+					<div class="blog-item-container">
+						<a href="" class="blog-item-text">The Loyolite</a>
+						<div class="blog-item-details">
+							Jan 2020 &#183; Words: 1116
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" id="blog-story">
+				<div class="blog-subtitle">
+					Fiction
+				</div>
+				<div class="blog-items">
+					<div class="blog-item-container">
+						<a href="" class="blog-item-text">The Loyolite</a>
+						<div class="blog-item-details">
+							Jan 2020 &#183; Words: 1116
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="more">
 	</div>
