Blogs Page different views, animations, base of blog post page.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="script.js" defer></script>
 </head>
 
-<body onload="splash(1000)">
+<body onload="splash(0)">
 	<div id="mobile-menu">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
 		  <button class="btn btn-dark" type="button" data-trigger="#main_nav">
@@ -674,11 +674,11 @@
 				</div>
 			</div>
 			<div class="row" id="blog-recommended">
-				<div class="blog-subtitle">
+				<div class="blog-subtitle blog-anim">
 					Recommended
 				</div>
 				<div class="blog-recommended-items">
-					<a href="" class="blog-recommended-item-container">
+					<a href="" class="blog-recommended-item-container blog-anim">
 						<div class="blog-item-image-container">
 							<div class="blog-item-image" style="background: url('Assets/Graphics/background.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;"></div>
 						</div>
@@ -689,28 +689,32 @@
 				</div>
 			</div>
 			<div class="row" id="blog-post">
-				<div class="blog-subtitle">
+				<div class="blog-subtitle blog-anim">
 					Posts
 				</div>
 				<div class="blog-items">
-					<div class="blog-item-container">
+					<div class="blog-item-container blog-anim">
 						<a href="" class="blog-item-text">The Loyolite</a>
 						<div class="blog-item-details">
 							Jan 2020 &#183; Words: 1116
 						</div>
 					</div>
+					<div class="blog-divider blog-anim">
+					</div>
 				</div>
 			</div>
 			<div class="row" id="blog-story">
-				<div class="blog-subtitle">
+				<div class="blog-subtitle blog-anim">
 					Fiction
 				</div>
 				<div class="blog-items">
-					<div class="blog-item-container">
+					<div class="blog-item-container blog-anim">
 						<a href="" class="blog-item-text">The Loyolite</a>
 						<div class="blog-item-details">
 							Jan 2020 &#183; Words: 1116
 						</div>
+					</div>
+					<div class="blog-divider blog-anim">
 					</div>
 				</div>
 			</div>
