Lazy day today; details in blog post for The Loyolite and line styling.

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 				</div>
 				<div class="blog-items">
 					<div class="blog-item-container blog-anim">
-						<a href="" class="blog-item-text">The Loyolite</a>
+						<a href="blog/the-loyolite/index.html" class="blog-item-text">The Loyolite</a>
 						<div class="blog-item-details">
 							Jan 2020 &#183; Words: 1116
 						</div>
