COMMIT MARKING MORE SECTION.  This is the last commit containing the More section.  Revert here if you want to find that code again.  New changes from the old one include designs for the blog post page, and the text animations for the More page.

--- a/index.html
+++ b/index.html
@@ -721,6 +721,26 @@
 		</div>
 	</div>
 	<div id="more">
+		<div class="container-fluid" id="more-container">
+			<div class="row" id="title-row-head">
+				<div class="title-container">
+					<div class="title-line-left-black title-line-anim"></div>
+					<div class="title-head-text-black title-head-anim">
+						More
+						<div class="title-head-underline-black title-underline-anim"></div>
+					</div>
+					<div class="title-line-right-black title-line-anim"></div>
+				</div>
+			</div>
+			<div class="row" id="more-intro">
+				<div class="more-intro-text-1">
+					You really want to see more?
+				</div>
+				<div class="more-intro-text-2">
+					All right, here's a bunch of my stuff.
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase.js"></script>
