Apart from mobile view for the footer, we're done.

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 					<div class="landing-menu-divider">
 						/
 					</div>
-					<a href="#more">
+					<a href="resume.pdf" target="_blank">
 						<div class="landing-menu-item">
-							More
+							Resume
 						</div>
 					</a>
 				</div>
@@ -722,22 +722,36 @@
 	</div>
 	<div id="more">
 		<div class="container-fluid" id="more-container">
-			<div class="row" id="title-row-head">
-				<div class="title-container">
-					<div class="title-line-left-black title-line-anim"></div>
-					<div class="title-head-text-black title-head-anim">
-						More
-						<div class="title-head-underline-black title-underline-anim"></div>
+			<div class="row" id="more-content">
+				<div class="more-text">
+					<div class="more-text-head">
+						Think I'd find something interesting?
 					</div>
-					<div class="title-line-right-black title-line-anim"></div>
+					<div class="more-text-sub">
+						I probably will, I'm easily amused.  If in doubt, send the message anyway, and preface it with "Duncain wants you".
+					</div>
 				</div>
-			</div>
-			<div class="row" id="more-intro">
-				<div class="more-intro-text-1">
-					You really want to see more?
-				</div>
-				<div class="more-intro-text-2">
-					All right, here's a bunch of my stuff.
+				<div class="more-buttons">
+					<div class="more-button-container">
+						<a href="mailto:jozdien@gmail.com">
+							<img class="more-icon" src="Assets/Graphics/mail.png">
+						</a>
+					</div>
+					<div class="more-button-container">
+						<a href="https://www.instagram.com/jozdien/">
+							<img class="more-icon" src="Assets/Graphics/insta.svg">
+						</a>
+					</div>
+					<div class="more-button-container">
+						<a href="https://twitter.com/jozdien">
+							<img class="more-icon" src="Assets/Graphics/twitter.svg">
+						</a>
+					</div>
+					<div class="more-button-container">
+						<a href="https://www.linkedin.com/in/jozdien/">
+							<img class="more-icon" src="Assets/Graphics/linkedin.svg">
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
