--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="script.js" defer></script>
 </head>
 
-<body onload="splash(1000)">
+<body onload="splash(2000)">
 	<div id="mobile-menu">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
 		  <button class="btn btn-dark" type="button" data-trigger="#main_nav">
@@ -34,6 +34,11 @@
 		</nav>
 	</div>
 	<div id="splashscreen">
+		<div class="splash-container">
+			<div class="splash-text">
+				You can't keep me in here forever.
+			</div>
+		</div>
 	</div>
 	<div id="landing">
 		<div class="container-fluid" id="landing-container">
