--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Arun Jose | "I notice I am confused" - EY</title>
+  <meta name="description" content="I develop, research, write, and draw.  I like making good things.  I think AI Alignment is the most important problem of our time.">
+  <meta name="og:title" property="og:title" content="Arun Jose">
+  <meta name="twitter:card" content="I develop, research, write, and draw.  I like making good things.  I think AI Alignment is the most important problem of our time.">
+  <title> Arun Jose | "I notice I am confused" - EY </title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="styles.css">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
