--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="I develop, research, write, and draw.  I like making good things.  I think AI Alignment is the most important problem of our time.">
+  <meta name="description" content="I develop, research, write, and draw.  Likes making good things.  I think AI Alignment is the most important problem of our time.">
   <meta name="og:title" property="og:title" content="Arun Jose">
   <meta name="twitter:card" content="I develop, research, write, and draw.  I like making good things.  I think AI Alignment is the most important problem of our time.">
   <title> Arun Jose | "I notice I am confused" - EY </title>
