--- a/index.html
+++ b/index.html
@@ -857,11 +857,11 @@
 					Recommended
 				</div>
 				<div class="blog-recommended-items">
-					<a href="blog/the-loyolite/" class="blog-recommended-item-container blog-anim">
+					<a href="blog/what-would-a-utopia-look-like/" class="blog-recommended-item-container blog-anim">
 						<div class="blog-item-image-container">
 							<div class="blog-item-image blog-recommended-1"></div>
 						</div>
-						<div class="blog-recommended-item-text">The Loyolite</div>
+						<div class="blog-recommended-item-text">What Would a Utopia Look Like?</div>
 					</a>
 				</div>
 			</div>
@@ -870,6 +870,11 @@
 					Posts
 				</div>
 				<div class="blog-items blog-post-items">
+					<div class="blog-item-container blog-anim">
+						<a href="blog/the-loyolite/" class="blog-item-text">What Would a Utopia Look Like?</a>
+						<div class="blog-item-details">Jan 2021 &#183; Words: 1609</div>
+					</div>
+					<div class="blog-divider blog-anim"></div>
 					<div class="blog-item-container blog-anim">
 						<a href="blog/the-loyolite/" class="blog-item-text">The Loyolite</a>
 						<div class="blog-item-details">Jan 2020 &#183; Words: 1116</div>
@@ -882,11 +887,6 @@
 					Fiction
 				</div>
 				<div class="blog-items blog-fiction-items">
-					<div class="blog-item-container blog-anim">
-						<a href="blog/the-loyolite/" class="blog-item-text">The Loyolite</a>
-						<div class="blog-item-details">Jan 2020 &#183; Words: 1116</div>
-					</div>
-					<div class="blog-divider blog-anim"></div>
 				</div>
 			</div>
 		</div>
