--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
 				</div>
 				<div class="blog-items blog-post-items">
 					<div class="blog-item-container blog-anim">
-						<a href="blog/the-loyolite/" class="blog-item-text">What Would a Utopia Look Like?</a>
+						<a href="blog/what-would-a-utopia-look-like/" class="blog-item-text">What Would a Utopia Look Like?</a>
 						<div class="blog-item-details">Jan 2021 &#183; Words: 1609</div>
 					</div>
 					<div class="blog-divider blog-anim"></div>
