--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="I develop, research, write, and draw.  Likes making good things.  I think AI Alignment is the most important problem of our time.">
-  <meta name="og:title" property="og:title" content="Arun Jose">
-  <meta name="twitter:card" content="I develop, research, write, and draw.  Likes making good things.  I think AI Alignment is the most important problem of our time.">
-  <title> Arun Jose | "I notice I am confused" - EY </title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-  <script src="script.js" defer></script>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="I develop, research, write, and draw.  Likes making good things.  I think AI Alignment is the most important problem of our time.">
+	<meta name="og:title" property="og:title" content="Arun Jose">
+	<meta name="twitter:card" content="I develop, research, write, and draw.  Likes making good things.  I think AI Alignment is the most important problem of our time.">
+	<title> Arun Jose | "I notice I am confused" - EY </title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+	<script src="script.js" defer></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PRSHKZXL94"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-PRSHKZXL94');
+	</script>
 </head>
 
 <body onload="splash(2000)">
