--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<title> Arun Jose | "I notice I am confused" - EY </title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="preload" href="Assets/Fonts/SFMonoRegular.otf" as="code-font">
+	<link rel="preload" href="Assets/Fonts/Inter-Bold-slnt=0.ttf" as="head-font">
+	<link rel="preload" href="Assets/Graphics/background.webp" as="background">
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 	<script src="script.js" defer></script>
